@@ -5,6 +5,8 @@
 <MODE>
 	<PROPS>
 		<PROPERTY NAME="lineComment" VALUE="#" />
+		<PROPERTY NAME="indentOpenBrackets" VALUE="{" />
+		<PROPERTY NAME="indentCloseBrackets" VALUE="}" />
 	</PROPS>
 	<RULES ESCAPE="\" IGNORE_CASE="TRUE" HIGHLIGHT_DIGITS="TRUE">
 		<!-- Comments -->
@@ -24,6 +26,7 @@
 		<MARK_FOLLOWING TYPE="KEYWORD2">$$</MARK_FOLLOWING>
 		<MARK_FOLLOWING TYPE="KEYWORD2">$&lt;</MARK_FOLLOWING>
 		<MARK_FOLLOWING TYPE="KEYWORD2">$</MARK_FOLLOWING>
+		<MARK_PREVIOUS TYPE="KEYWORD2" EXCLUDE_MATCH="TRUE">=</MARK_PREVIOUS>
 
 		<!-- weird stuff -->
 		<SPAN TYPE="KEYWORD3" DELEGATE="EXEC">
@@ -68,6 +71,29 @@
 
 		<!-- %jobnumber -->
 		<MARK_FOLLOWING TYPE="KEYWORD2">%</MARK_FOLLOWING>
+
+		<!-- functions -->
+		<MARK_PREVIOUS TYPE="FUNCTION" EXCLUDE_MATCH="TRUE">(</MARK_PREVIOUS>
+
+		<KEYWORDS>
+			<KEYWORD1>if</KEYWORD1>
+			<KEYWORD1>then</KEYWORD1>
+			<KEYWORD1>elif</KEYWORD1>
+			<KEYWORD1>else</KEYWORD1>
+			<KEYWORD1>fi</KEYWORD1>
+			<KEYWORD1>case</KEYWORD1>
+			<KEYWORD1>in</KEYWORD1>
+			<OPERATOR>;;</OPERATOR>
+			<KEYWORD1>esac</KEYWORD1>
+			<KEYWORD1>while</KEYWORD1>
+			<KEYWORD1>for</KEYWORD1>
+			<KEYWORD1>do</KEYWORD1>
+			<KEYWORD1>done</KEYWORD1>
+			<KEYWORD1>continue</KEYWORD1>
+
+			<KEYWORD1>local</KEYWORD1>
+			<KEYWORD1>return</KEYWORD1>
+		</KEYWORDS>
 
 		<!-- some of these should be marked OPERATOR -->
 		<!-- <SEQ TYPE="NULL">)</SEQ>
